<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TremorTouchTest</string>
    <string name="action_settings">Settings</string>
    <string name="shape_number_lable">Shape number:</string>
    <string name="time_lable">Shape Time (sec):</string>
    <string name="main_form_title">Tremor Touch Test - New Test</string>
    <string name="tester_name_hint">Nick-name</string>
    <string name="tester_age_hint">Age</string>
    <string name="gender_male">Male</string>
    <string name="gender_female">Female</string>
    <string name="right_hand">Right handed</string>
    <string name="left_hand">Left handed</string>
    <string name="tremor_time_hint">Years of tremor</string>
    <string name="tremor_estimation_hint">Tremor estimation (0&#8211;10)</string>
    <string name="time_per_shape_hint">Time per shape (seconds)</string>
    <string name="notes_hint">Notes...</string>
    <string name="medical_hint">Medical treatment\nHas?\nDuring the test?\n</string>
    <string name="writeResults"> Write results to file</string>

</resources>